--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css" />
     <title>TMK Persnol Blog</title>
   </head>
   <body>
     <header>
-      <nav>
-        <img src="assets/logo.png" alt="logo" />
+      <nav class="navbar">
+        <img
+          src="assets/Mehmet-Kelnebioglu.svg"
+          alt="logo"
+          height="100"
+          width="160"
+        />
+        <div>
+          <div class="desktop-nav">
+            <div><a href="Home">Home</a></div>
+            <div><a href="About">About</a></div>
+            <div><a href="Contac">Contact</a> t</div>
+          </div>
+        </div>
       </nav>
     </header>
   </body>
