--- a/index.html
+++ b/index.html
@@ -11,19 +11,34 @@
     <header>
       <nav class="navbar">
         <img
-          src="assets/Mehmet-Kelnebioglu.svg"
+          src="./assets/Mehmet.svg"
           alt="logo"
-          height="100"
-          width="160"
+          height="100px"
+          width="200"
+          font="200"
         />
         <div>
           <div class="desktop-nav">
-            <div><a href="Home">Home</a></div>
-            <div><a href="About">About</a></div>
-            <div><a href="Contac">Contact</a> t</div>
+            <div><a href="" class="nav-link">Home</a></div>
+            <div><a href="about-me.html" class="nav-link">About</a></div>
+            <div><a href="" class="nav-link">Contact</a></div>
           </div>
         </div>
       </nav>
     </header>
+    <br />
+    <div class="person">
+      <div class="person-left">
+        <p>
+          Hi I'm Mehmet. <br />
+          I'm a <b> Web Developer</b>
+        </p>
+      </div>
+      <div class="person-right">
+        <div class="image-box">
+          <img src="" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
