--- a/index.html
+++ b/index.html
@@ -33,10 +33,19 @@
           Hi I'm Mehmet. <br />
           I'm a <b> Web Developer</b>
         </p>
+        <div class="btn-group">
+          <button class="btn">About Me</button>
+          <button class="btn">Contact</button>
+        </div>
       </div>
       <div class="person-right">
         <div class="image-box">
-          <img src="" alt="" />
+          <img
+            class="photo"
+            src="./assets/personphoto.jpeg"
+            width="250px"
+            alt="person-photo"
+          />
         </div>
       </div>
     </div>
