--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           height="100px"
           width="200"
           font="200"
+          title="MEHMET"
         />
         <div>
           <div class="desktop-nav">
@@ -48,6 +49,88 @@
           />
         </div>
       </div>
+    </div>
+    <br />
+    <br />
+    <h2 style="padding-left: 70px">Articles</h2>
+
+    <div class="container">
+      <div class="blog-title"></div>
+      <br />
+      <div class="blog-card-group">
+        <div class="blog-card bg-1">
+          <div class="card-header">
+            <img
+              src="./assets/personphoto.jpeg"
+              alt=""
+              width="50px"
+              style="border-radius: 10px; margin-right: 50px"
+            />
+            <p class="card-header-title">What is the "BLOCKCHAIN"?</p>
+          </div>
+          <div class="card-content">
+            <p class="card-content-text">
+              The blockchain is a digital ledger recording secure and
+              tamper-proof transactions. It's decentralized, making it more
+              secure and resistant to attacks. It has potential applications in
+              various industries, and its cryptography makes data tampering
+              virtually impossible. <br />
+              <a href="https://medium.com/@mehmetkelnebioglu" target="_blank"
+                >continue to read</a
+              >
+            </p>
+          </div>
+        </div>
+      
+        <div class="blog-card bg-2">
+          <div class="card-header">
+            <img
+              src="./assets/personphoto.jpeg"
+              alt=""
+              width="50px"
+              style="border-radius: 10px; margin-right: 50px"
+              title="MEHMET"
+            />
+            <p class="card-header-title">What is the "BLOCKCHAIN"?</p>
+          </div>
+          <div class="card-content">
+            <p class="card-content-text">
+              The blockchain is a digital ledger recording secure and
+              tamper-proof transactions. It's decentralized, making it more
+              secure and resistant to attacks. It has potential applications in
+              various industries, and its cryptography makes data tampering
+              virtually impossible. <br />
+              <a href="https://medium.com/@mehmetkelnebioglu" target="_blank"
+                >continue to read</a
+              >
+            </p>
+          </div>
+        </div>
+      
+        <div class="blog-card bg-3">
+          <div class="card-header">
+            <img
+              src="./assets/personphoto.jpeg"
+              alt=""
+              width="50px"
+              style="border-radius: 10px; margin-right: 50px"
+            />
+            <p class="card-header-title">What is the "BLOCKCHAIN"?</p>
+          </div>
+          <div class="card-content">
+            <p class="card-content-text">
+              The blockchain is a digital ledger recording secure and
+              tamper-proof transactions. It's decentralized, making it more
+              secure and resistant to attacks. It has potential applications in
+              various industries, and its cryptography makes data tampering
+              virtually impossible. <br />
+              <a href="https://medium.com/@mehmetkelnebioglu" target="_blank"
+                >continue to read</a
+              >
+            </p>
+          </div>
+        </div>
+
     </div>
   </body>
 </html>
